# rust-tiny-claw

./: .env.example  .env.feishu.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  security-audit.yml
deploy/nginx/: tiny-claw-feishu.conf.template
docs/: TODO.md
docs/design/: agent-tracing-otlp.md  architecture.md  benchmark-eval.md  feishu-pluggable-integration.md  feishu-tool-approval-middleware.md  progressive-skill-loading.md  prompt-assembly-agents-skills.md  request-user-help-tool.md  subagent-runtime-and-templates.md  token-usage-elapsed-telemetry.md
docs/todo/: adaptive-reasoning.md  background-tasks.md  feishu.md  integration-tests.md  main.md  subagents.md
docs/usage/: feishu.md
scripts/: deploy-feishu.sh  render-feishu-nginx.sh
src/: app.rs  lib.rs  main.rs  plan_mode.rs
src/agent_runtime/: mod.rs  supervisor.rs  templates.rs
src/context_engine/: compaction.rs  mod.rs  recovery.rs  reminder.rs  skills.rs
src/engine/: mod.rs  tests.rs
src/eval/: mod.rs  scripted.rs
src/integrations/: mod.rs
src/memory/: manager.rs  mod.rs  session.rs  tests.rs
src/provider/: claude_compatible.rs  mod.rs  openai_compatible.rs  sse.rs
src/reporter/: mod.rs  terminal.rs
src/schema/: mod.rs
src/telemetry/: exporter.rs  json_exporter.rs  metrics.rs  mod.rs  otlp_exporter.rs  provider.rs  tool.rs  trace.rs
tests/: bench_deterministic.rs  bench_live.rs  cli_smoke.rs  feishu_integration.rs  load_skill_integration.rs  provider_tooling_real.rs  recovery_real.rs  subagent_real.rs  telemetry_real.rs  trace_integration.rs
(+21 files in other folders)
